[gd_scene load_steps=14 format=3 uid="uid://fvpfrmtejan1"]

[ext_resource type="Script" uid="uid://fms53cnf5c5h" path="res://Scripts/cassette_draft.gd" id="1_85jq5"]
[ext_resource type="Texture2D" uid="uid://u501tg45mcaq" path="res://Images/MainMenu/Grayout_for_buttons.png" id="2_oyr8h"]
[ext_resource type="Texture2D" uid="uid://c4n1qwbisfofl" path="res://Images/CardDraft/deck builder title box.png" id="3_01xxh"]
[ext_resource type="FontFile" uid="uid://dtn7qee5h51x5" path="res://Font/atwriter.ttf" id="4_s6b7r"]
[ext_resource type="Texture2D" uid="uid://b5iagsm2bnq3f" path="res://Images/CardDraft/narrow background box.png" id="5_xi4r4"]
[ext_resource type="Texture2D" uid="uid://diwagghhxffwr" path="res://Images/CardDraft/your tapes icon.png" id="6_obids"]
[ext_resource type="Texture2D" uid="uid://cfp70r5vwa08w" path="res://Images/CardDraft/wide background box.png" id="7_lt62u"]
[ext_resource type="Texture2D" uid="uid://cxq1ggqy2sh0o" path="res://Images/CardDraft/available tapes icon.png" id="8_3cypt"]
[ext_resource type="Texture2D" uid="uid://s4lxlv8vny4d" path="res://Images/CardDraft/small_narrow_background_box.png" id="9_bjbw4"]
[ext_resource type="Texture2D" uid="uid://bcq44pe2uy0di" path="res://Images/CardDraft/reward tapes icon.png" id="10_8ymhq"]
[ext_resource type="PackedScene" uid="uid://b6tjc5o53wubc" path="res://Scenes/deckbuilder_cassette_preview.tscn" id="11_g15bn"]
[ext_resource type="PackedScene" uid="uid://bokhffkteotyi" path="res://Scenes/MenuButton.tscn" id="12_4yi5i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vo3e2"]
size = Vector2(394.5, 722)

[node name="CassetteDraft" type="Node2D"]
visible = false
z_index = 20
script = ExtResource("1_85jq5")

[node name="BACKGROUND" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.972549)
offset_top = -4.0
offset_right = 1918.0
offset_bottom = 1076.0
texture = ExtResource("2_oyr8h")
expand_mode = 1

[node name="TITLE" type="Node2D" parent="."]

[node name="DeckBuilderTitleBox" type="Sprite2D" parent="TITLE"]
position = Vector2(984, 79)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_01xxh")

[node name="Label" type="Label" parent="TITLE"]
offset_left = 799.0
offset_top = 22.0
offset_right = 1138.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_s6b7r")
theme_override_font_sizes/font_size = 48
text = "DECK BUILDER"

[node name="PlayerDeck" type="Node2D" parent="."]
position = Vector2(300, 220)

[node name="Deck Area2" type="Sprite2D" parent="PlayerDeck"]
position = Vector2(-16, 300)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_xi4r4")

[node name="CassetteCount" type="Label" parent="PlayerDeck"]
offset_left = -197.0
offset_top = -116.0
offset_right = 124.0
offset_bottom = -62.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_s6b7r")
theme_override_font_sizes/font_size = 36
text = "Your Tapes 0/10"
metadata/_edit_use_anchors_ = true

[node name="YourTapesIcon2" type="Sprite2D" parent="PlayerDeck"]
position = Vector2(198, -107)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_obids")

[node name="Cassettes" type="Node2D" parent="PlayerDeck"]
position = Vector2(-210, -35)
scale = Vector2(0.8, 0.9)

[node name="Area2D" type="Area2D" parent="PlayerDeck"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeck/Area2D"]
position = Vector2(-17.25, 330)
shape = SubResource("RectangleShape2D_vo3e2")

[node name="PlayerAvailableCassettes" type="Node2D" parent="."]
position = Vector2(960, 220)

[node name="Deck Area" type="Sprite2D" parent="PlayerAvailableCassettes"]
position = Vector2(0, 300)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_lt62u")

[node name="Label" type="Label" parent="PlayerAvailableCassettes"]
offset_left = -373.0
offset_top = -120.0
offset_right = -52.0
offset_bottom = -66.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_s6b7r")
theme_override_font_sizes/font_size = 36
text = "Available Tapes"

[node name="YourTapesIcon" type="Sprite2D" parent="PlayerAvailableCassettes"]
position = Vector2(362, -100)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_3cypt")

[node name="AvailableCassettesColumn" type="Node2D" parent="PlayerAvailableCassettes"]
position = Vector2(-388, -34)
scale = Vector2(0.8, 0.9)

[node name="AvailableCassettesColumn2" type="Node2D" parent="PlayerAvailableCassettes"]
position = Vector2(-8, -31)
scale = Vector2(0.8, 0.9)

[node name="PlayerRewardCassettes" type="Node2D" parent="."]
position = Vector2(1620, 220)

[node name="Deck Area" type="Sprite2D" parent="PlayerRewardCassettes"]
position = Vector2(0, 112)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_bjbw4")

[node name="Label" type="Label" parent="PlayerRewardCassettes"]
offset_left = -181.0
offset_top = -113.0
offset_right = 140.0
offset_bottom = -59.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_s6b7r")
theme_override_font_sizes/font_size = 36
text = "Reward Tapes"

[node name="YourTapesIcon" type="Sprite2D" parent="PlayerRewardCassettes"]
position = Vector2(180, -103)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_8ymhq")

[node name="Cassettes" type="Node2D" parent="PlayerRewardCassettes"]
position = Vector2(-194, -35)
scale = Vector2(0.8, 0.9)

[node name="DeckbuilderCassettePreview" parent="." instance=ExtResource("11_g15bn")]
visible = false
position = Vector2(1620, 672)

[node name="ProceedWithDeck" parent="." instance=ExtResource("12_4yi5i")]
offset_left = 1448.0
offset_top = 886.0
offset_right = 1848.0
offset_bottom = 961.0
disabled = true
text = "Proceed to Battle"

[node name="BackToMainMenu" parent="." instance=ExtResource("12_4yi5i")]
offset_left = 1449.0
offset_top = 976.0
offset_right = 1849.0
offset_bottom = 1051.0
text = "Back to Main Menu"
